# redpixel

./: 1.pcx  10.pcx  2.pcx  3.pcx  4.pcx  5.pcx  6.pcx  7.pcx  8.pcx  9.pcx  CMakeLists.txt  LICENCE.txt  README.linux  TODO  ahh.w  ahh2.w  allegro.sh  anim.pcx  blood.h  bluprisn.wak  break.c  bugs.txt  common.c  common.h  compile.txt  creds.c  creds.txt  death01.pcx  death02.pcx  deathmat.wak  demo0000.rec  demo0001.rec  demo0002.rec  drop.pcx  dzcomm.c  explode5.w  footstep.w  grot.txt  icon2.xpm  intro.c  (+51 more)
agup/: ChangeLog  LICENCE.txt  Makefile  README  REQUIRE  aase.c  aase.h  agtk.c  agtk.h  agup.c  agupitrn.h  awin95.c  awin95.h  examp.c  gem.pcx  modified.txt  rules.mk
bigdemos/: dm-big.rec
cmake/: FileList.cmake
demos/: barrlfun.rec  castle2.rec  dm-30all.rec  dm-bguns.rec  dm-funny.rec  dm-hand.rec  dm-sniper.rec  dm-snper.rec  dm-tower.rec  dm-tower2.rec  hand-2.rec  hand.rec  ruppel.rec  tute-2.rec  tute.rec
docs/: makefile  manual  manual-1.htm  manual-1.html  manual-2.htm  manual-2.html  manual-3.htm  manual-3.html  manual-4.htm  manual-4.html  manual-5.htm  manual-5.html  manual-6.htm  manual-6.html  manual.htm  manual.html  manual.sgml  manual.sm  manual.txt  smarkup.scm
docs/old/: redpixel.txt
gfx/: fragcoun.pcx  lcdcur.pcx  radarico.pcx  shared256.pcx
gfx/fucked/: anim.fli  desc
jgmod/: fixdjgpp.bat  fixming.bat  fixmsvc.bat  fixunix.sh  modified.txt  readme.be  readme.dj  readme.lnx  readme.mgw  readme.txt  readme.vc
jgmod/misc/: runner.c
jgmod/plugins/: datmod.c  datmod.inc  datmod.scr  datmod.scv  plugins.dj  plugins.lnx  plugins.mgw  plugins.vc
jgmod/src/: file_io.c  file_io.h  history.txt  jgm.c  jgmod.c  jgmod.h  load_it.c  load_jgm.c  load_mod.c  load_s3m.c  load_xm.c  makefile.be  makefile.dj  makefile.lnx  makefile.mgw  mod.c  player.c  player2.c  player3.c  player4.c  save_jgm.c
libcda/: CHANGES  COPYING  README  bcc.c  beos.cpp  djgpp.c  example.c  libcda.h  linux.c
maps/: arena.wak  around.wak  authors.txt  barrlamm.wak  barrlfun.wak  bigbang.wak  bigguns.wak  blue.wak  cage.wak  castle.wak  castle2.wak  castle3.wak  chemcham.wak  chess.wak  construct.wak  corridors.wak  deathmat.wak  devtest.wak  dome.wak  famfeude.wak  frogger.wak  garg.wak  green.wak  hand.wak  hell.wak  hell2.wak  house.wak  icecaves.wak  innrspac.wak  lots.wak  mario.wak  maze.wak  megablam.wak  mini.wak  nick.wak  open.wak  peter.wak  pooyan.wak  small.wak  sniper.wak  (+11 more)
misc/: fixver.sh  makepkg.sh  redpixel.nsi  redpixel.spec  redpixel.txt.old
misc/obsolete/: manual.sgml
music/: amb.xm  intruder.xm  jimchaos.xm  music.txt  myown.xm  north.xm  settler.xm  silk.xm  strain.xm  stranded.xm  yathna.xm
music/specific/: present.txt  present.xm
src/: backpack.c  blast.c  blod.c  blood.h  bullet.c  common.c  common.h  corpse.c  cpu.c  credits.c  creds.c  demintro.c  demintro.h  demo.c  demo.h  engine.c  explo.c  fblit.c  gameloop.c  globals.c  inp_demo.c  inp_peer.c  intro.c  launch.c  log.txt  main.c  main.h  map.c  mapper.c  menu.c  message.c  mine.c  mousespr.c  music.c  options.c  particle.c  player.c  plupdate.c  resource.c  rg_rand.c  (+26 more)
src/fastsqrt/: bmark.c  fastflot.h  fastsqrt.c  (+2 more)
stats/: default.st  quick.st  red07.st  stats
(+77 files in other folders)
